Better registry/interface handling